OP-2839: Changes related to dockerImageName dropdown with Docker Account dropdown in Application creation page

--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -197,3 +197,23 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 .table-head{
 	color: #999;
 }
+.dockerImageSource{
+	padding: 0px;
+	.customImg{
+		border-radius: 0px 5px 5px 0px;
+		border-left: none;
+	}
+	.customAcc{
+		background: #fff url(../../../assets/images/collen.png) no-repeat center right;
+		border-radius: 5px 0px 0px 5px;
+		border-right: none;
+	}
+	.wheninvalid{
+		border: 1px solid #dc3545;
+		border-right: none;
+	}
+	.disabledinput{
+		background-color: #e9ecef;
+	}
+	
+}
