--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -36,6 +36,9 @@
   .datepickerDiv{
     padding-left: 16px;
   }
+  .mp-4{
+    padding: 1rem!important;
+  }
   .bg-info {
     background-color: #eaeaea !important;
 }
