--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -216,13 +216,22 @@
                                   class="help-block">Cloud Account is required</span>
                                 </div> -->
                                 <div class="form-group mb-3 pl-5 text-muted">
-                                  <label>Docker Image Name</label>
+                                  <label>Docker Account & Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
-                                    <select class="form-control" formControlName="dockerImageName" 
-                                    [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'is-invalid':''">
-                                      <option value="" [disabled]="true">Select</option>
-                                      <option *ngFor="let dockerimages of dockerImageDropdownData" value="{{dockerimages}}">{{dockerimages}}</option>
-                                    </select>
+                                      <div class="col-5 dockerImageSource">
+                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)" [disabled]="isReadonly(i)" 
+                                        [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'wheninvalid':''">
+                                          <option value="" [disabled]="true">Select</option>
+                                          <option *ngFor="let dockerimages of dockerImageData" value="{{dockerimages.imageSource}}">{{dockerimages.imageSource}}</option>
+                                        </select>
+                                      </div>
+                                      <div class="col-7 dockerImageSource">
+                                        <select class="form-control customImg" formControlName="dockerImageName" 
+                                        [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'is-invalid':''">
+                                          <option value="" [disabled]="true">Select</option>
+                                          <option *ngFor="let dockerimages of dockerImageDropdownData[i]" value="{{dockerimages}}">{{dockerimages}}</option>
+                                        </select>
+                                      </div>
                                   </div>
                                   <span *ngIf="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched"
                                   class="help-block">Docker Image Name is required</span>
