--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
@@ -2,5 +2,10 @@
     position: fixed;
     top: 0;
     z-index: 100;
-  }
-  
+}
+.matricstatusicon{
+  font-size: 10px;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  padding: 9px 9px 9px 9px;   
+}
