--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -149,6 +149,7 @@ tbody{
     cursor: pointer;
     color: #0ea4fb;
 }
+
 .ngx-charts-outer {
   display: table;
   .ngx-charts {
@@ -161,4 +162,7 @@ tbody{
       width: 100% !important;
       display: table-header-group;
   }
+}
+.service-selection{
+  cursor: pointer;
 }
